--- a/Regresyon_Odev_6.ipynb
+++ b/Regresyon_Odev_6.ipynb
@@ -1851,21 +1851,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Modellerdeki degisken sayilarini azaltmamiz tahmin perfornmansimizi dusurdu. 10 degiskenli modelimiz en iyi performansi gosterdi."
+    "Modellerdeki degisken sayilarini azaltmamiz tahmin perfornmansimizi dusurdu. 10 degiskenli modelimiz en iyi performansi gosterdi. Ancak bu modeldeki aciklama gucu yetersiz olan 'GrLivArea' ve 'OverallCond' sutunlari da temizlendi."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_arttirilmis_anlamli = ev_fiyatlari_num_na[anlamli_degerler[:10]]"
+    "X_arttirilmis_anlamli_na = ev_fiyatlari_num_na[anlamli_degerler[:10]].drop(['GrLivArea','OverallCond'],axis =1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1875,19 +1875,19 @@
        "         normalize=False)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lrm = linear_model.LinearRegression()\n",
-    "lrm.fit(X_arttirilmis_anlamli,y_anlamli)"
+    "lrm.fit(X_arttirilmis_anlamli_na,y_anlamli)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1895,11 +1895,10 @@
      "output_type": "stream",
      "text": [
       "Degiskenler: \n",
-      " [-1.66245213e+02  5.09602895e-01  2.27604495e+04  5.32278412e+03\n",
-      "  5.10927617e+02  1.90536092e+01  7.44554662e+00  3.53858732e+01\n",
-      "  2.70460864e+01  2.86719591e+01]\n",
+      " [-1.77410129e+02  5.15422782e-01  2.42299217e+04  4.02511274e+02\n",
+      "  2.03808090e+01  5.83551849e+00  6.19362951e+01  5.48666523e+01]\n",
       "sabir Deger (Bias): \n",
-      "  -1100973.6029661335\n"
+      "  -861925.9815532255\n"
      ]
     }
    ],
@@ -1910,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1925,22 +1924,22 @@
        "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.962</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   3660.</td> \n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   4578.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Date:</th>             <td>Mon, 22 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:27:46</td>     <th>  Log-Likelihood:    </th> <td> -17477.</td> \n",
+       "  <th>Time:</th>                 <td>22:54:12</td>     <th>  Log-Likelihood:    </th> <td> -17478.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1459</td>      <th>  AIC:               </th> <td>3.497e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>  1449</td>      <th>  BIC:               </th> <td>3.503e+04</td>\n",
+       "  <th>Df Residuals:</th>          <td>  1451</td>      <th>  BIC:               </th> <td>3.501e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Model:</th>              <td>    10</td>      <th>                     </th>     <td> </td>    \n",
+       "  <th>Df Model:</th>              <td>     8</td>      <th>                     </th>     <td> </td>    \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
@@ -1951,50 +1950,44 @@
        "       <td></td>          <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>MSSubClass</th>  <td> -164.6031</td> <td>   26.302</td> <td>   -6.258</td> <td> 0.000</td> <td> -216.197</td> <td> -113.010</td>\n",
+       "  <th>MSSubClass</th>  <td> -165.0795</td> <td>   26.124</td> <td>   -6.319</td> <td> 0.000</td> <td> -216.324</td> <td> -113.835</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>LotArea</th>     <td>    0.4573</td> <td>    0.109</td> <td>    4.189</td> <td> 0.000</td> <td>    0.243</td> <td>    0.671</td>\n",
+       "  <th>LotArea</th>     <td>    0.4558</td> <td>    0.109</td> <td>    4.179</td> <td> 0.000</td> <td>    0.242</td> <td>    0.670</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>OverallQual</th> <td>  2.98e+04</td> <td> 1028.915</td> <td>   28.964</td> <td> 0.000</td> <td> 2.78e+04</td> <td> 3.18e+04</td>\n",
+       "  <th>OverallQual</th> <td> 2.985e+04</td> <td> 1027.300</td> <td>   29.058</td> <td> 0.000</td> <td> 2.78e+04</td> <td> 3.19e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>OverallCond</th> <td> -184.7116</td> <td>  905.337</td> <td>   -0.204</td> <td> 0.838</td> <td>-1960.623</td> <td> 1591.200</td>\n",
+       "  <th>YearBuilt</th>   <td>  -50.1957</td> <td>    2.710</td> <td>  -18.524</td> <td> 0.000</td> <td>  -55.511</td> <td>  -44.880</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>YearBuilt</th>   <td>  -49.5460</td> <td>    3.969</td> <td>  -12.483</td> <td> 0.000</td> <td>  -57.332</td> <td>  -41.760</td>\n",
+       "  <th>BsmtFinSF1</th>  <td>   23.2181</td> <td>    2.635</td> <td>    8.812</td> <td> 0.000</td> <td>   18.050</td> <td>   28.386</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>BsmtFinSF1</th>  <td>   23.0917</td> <td>    2.644</td> <td>    8.734</td> <td> 0.000</td> <td>   17.905</td> <td>   28.278</td>\n",
+       "  <th>TotalBsmtSF</th> <td>   11.8529</td> <td>    4.510</td> <td>    2.628</td> <td> 0.009</td> <td>    3.005</td> <td>   20.701</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>TotalBsmtSF</th> <td>   11.7468</td> <td>    4.547</td> <td>    2.584</td> <td> 0.010</td> <td>    2.828</td> <td>   20.666</td>\n",
+       "  <th>1stFlrSF</th>    <td>   53.7868</td> <td>    4.724</td> <td>   11.386</td> <td> 0.000</td> <td>   44.521</td> <td>   63.053</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>1stFlrSF</th>    <td>   74.1776</td> <td>   21.706</td> <td>    3.417</td> <td> 0.001</td> <td>   31.600</td> <td>  116.756</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>2ndFlrSF</th>    <td>   69.7444</td> <td>   21.344</td> <td>    3.268</td> <td> 0.001</td> <td>   27.876</td> <td>  111.613</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>GrLivArea</th>   <td>  -20.1963</td> <td>   20.977</td> <td>   -0.963</td> <td> 0.336</td> <td>  -61.345</td> <td>   20.952</td>\n",
+       "  <th>2ndFlrSF</th>    <td>   49.3569</td> <td>    2.816</td> <td>   17.529</td> <td> 0.000</td> <td>   43.834</td> <td>   54.880</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "  <th>Omnibus:</th>       <td>779.504</td> <th>  Durbin-Watson:     </th>  <td>   1.986</td> \n",
+       "  <th>Omnibus:</th>       <td>780.917</td> <th>  Durbin-Watson:     </th>  <td>   1.985</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>100805.877</td>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>100842.740</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Skew:</th>          <td>-1.475</td>  <th>  Prob(JB):          </th>  <td>    0.00</td> \n",
+       "  <th>Skew:</th>          <td>-1.480</td>  <th>  Prob(JB):          </th>  <td>    0.00</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>      <td>43.614</td>  <th>  Cond. No.          </th>  <td>1.49e+04</td> \n",
+       "  <th>Kurtosis:</th>      <td>43.621</td>  <th>  Cond. No.          </th>  <td>1.48e+04</td> \n",
        "</tr>\n",
-       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 1.49e+04. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 1.48e+04. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
       ],
       "text/plain": [
        "<class 'statsmodels.iolib.summary.Summary'>\n",
@@ -2003,50 +1996,63 @@
        "==============================================================================\n",
        "Dep. Variable:              SalePrice   R-squared:                       0.962\n",
        "Model:                            OLS   Adj. R-squared:                  0.962\n",
-       "Method:                 Least Squares   F-statistic:                     3660.\n",
+       "Method:                 Least Squares   F-statistic:                     4578.\n",
        "Date:                Mon, 22 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        22:27:46   Log-Likelihood:                -17477.\n",
+       "Time:                        22:54:12   Log-Likelihood:                -17478.\n",
        "No. Observations:                1459   AIC:                         3.497e+04\n",
-       "Df Residuals:                    1449   BIC:                         3.503e+04\n",
-       "Df Model:                          10                                         \n",
+       "Df Residuals:                    1451   BIC:                         3.501e+04\n",
+       "Df Model:                           8                                         \n",
        "Covariance Type:            nonrobust                                         \n",
        "===============================================================================\n",
        "                  coef    std err          t      P>|t|      [0.025      0.975]\n",
        "-------------------------------------------------------------------------------\n",
-       "MSSubClass   -164.6031     26.302     -6.258      0.000    -216.197    -113.010\n",
-       "LotArea         0.4573      0.109      4.189      0.000       0.243       0.671\n",
-       "OverallQual   2.98e+04   1028.915     28.964      0.000    2.78e+04    3.18e+04\n",
-       "OverallCond  -184.7116    905.337     -0.204      0.838   -1960.623    1591.200\n",
-       "YearBuilt     -49.5460      3.969    -12.483      0.000     -57.332     -41.760\n",
-       "BsmtFinSF1     23.0917      2.644      8.734      0.000      17.905      28.278\n",
-       "TotalBsmtSF    11.7468      4.547      2.584      0.010       2.828      20.666\n",
-       "1stFlrSF       74.1776     21.706      3.417      0.001      31.600     116.756\n",
-       "2ndFlrSF       69.7444     21.344      3.268      0.001      27.876     111.613\n",
-       "GrLivArea     -20.1963     20.977     -0.963      0.336     -61.345      20.952\n",
+       "MSSubClass   -165.0795     26.124     -6.319      0.000    -216.324    -113.835\n",
+       "LotArea         0.4558      0.109      4.179      0.000       0.242       0.670\n",
+       "OverallQual  2.985e+04   1027.300     29.058      0.000    2.78e+04    3.19e+04\n",
+       "YearBuilt     -50.1957      2.710    -18.524      0.000     -55.511     -44.880\n",
+       "BsmtFinSF1     23.2181      2.635      8.812      0.000      18.050      28.386\n",
+       "TotalBsmtSF    11.8529      4.510      2.628      0.009       3.005      20.701\n",
+       "1stFlrSF       53.7868      4.724     11.386      0.000      44.521      63.053\n",
+       "2ndFlrSF       49.3569      2.816     17.529      0.000      43.834      54.880\n",
        "==============================================================================\n",
-       "Omnibus:                      779.504   Durbin-Watson:                   1.986\n",
-       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           100805.877\n",
-       "Skew:                          -1.475   Prob(JB):                         0.00\n",
-       "Kurtosis:                      43.614   Cond. No.                     1.49e+04\n",
+       "Omnibus:                      780.917   Durbin-Watson:                   1.985\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           100842.740\n",
+       "Skew:                          -1.480   Prob(JB):                         0.00\n",
+       "Kurtosis:                      43.621   Cond. No.                     1.48e+04\n",
        "==============================================================================\n",
        "\n",
        "Warnings:\n",
        "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-       "[2] The condition number is large, 1.49e+04. This might indicate that there are\n",
+       "[2] The condition number is large, 1.48e+04. This might indicate that there are\n",
        "strong multicollinearity or other numerical problems.\n",
        "\"\"\""
       ]
      },
-     "execution_count": 44,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Arttirilmis_anlamli_model= sm.add_constant(X_arttirilmis_anlamli)\n",
-    "results = sm.OLS(y_anlamli, X_arttirilmis_anlamli).fit()\n",
+    "Arttirilmis_anlamli_model= sm.add_constant(X_arttirilmis_anlamli_na)\n",
+    "results = sm.OLS(y_anlamli, X_arttirilmis_anlamli_na).fit()\n",
     "results.summary()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Eğer tahmin performansı ile değişken eliyorsak p değerinin önemi yok\n",
+    "Aciklama gücü ile eliyorsak, p değeri yüksek olanlar elenebilir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
