--- a/Regresyon_Odev_6.ipynb
+++ b/Regresyon_Odev_6.ipynb
@@ -529,7 +529,7 @@
        "  <th>Date:</th>             <td>Mon, 22 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:27:45</td>     <th>  Log-Likelihood:    </th> <td> -13904.</td> \n",
+       "  <th>Time:</th>                 <td>22:58:00</td>     <th>  Log-Likelihood:    </th> <td> -13904.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1167</td>      <th>  AIC:               </th> <td>2.787e+04</td>\n",
@@ -675,7 +675,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.794\n",
        "Method:                 Least Squares   F-statistic:                     146.0\n",
        "Date:                Mon, 22 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        22:27:45   Log-Likelihood:                -13904.\n",
+       "Time:                        22:58:00   Log-Likelihood:                -13904.\n",
        "No. Observations:                1167   AIC:                         2.787e+04\n",
        "Df Residuals:                    1135   BIC:                         2.803e+04\n",
        "Df Model:                          31                                         \n",
@@ -800,7 +800,7 @@
        "  <th>Date:</th>             <td>Mon, 22 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:27:45</td>     <th>  Log-Likelihood:    </th> <td> -13904.</td> \n",
+       "  <th>Time:</th>                 <td>22:58:00</td>     <th>  Log-Likelihood:    </th> <td> -13904.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1167</td>      <th>  AIC:               </th> <td>2.787e+04</td>\n",
@@ -946,7 +946,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.794\n",
        "Method:                 Least Squares   F-statistic:                     146.0\n",
        "Date:                Mon, 22 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        22:27:45   Log-Likelihood:                -13904.\n",
+       "Time:                        22:58:00   Log-Likelihood:                -13904.\n",
        "No. Observations:                1167   AIC:                         2.787e+04\n",
        "Df Residuals:                    1135   BIC:                         2.803e+04\n",
        "Df Model:                          31                                         \n",
@@ -1189,7 +1189,7 @@
        "  <th>Date:</th>             <td>Mon, 22 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:27:46</td>     <th>  Log-Likelihood:    </th> <td> -17335.</td> \n",
+       "  <th>Time:</th>                 <td>22:58:00</td>     <th>  Log-Likelihood:    </th> <td> -17335.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1459</td>      <th>  AIC:               </th> <td>3.471e+04</td>\n",
@@ -1287,7 +1287,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.804\n",
        "Method:                 Least Squares   F-statistic:                     352.4\n",
        "Date:                Mon, 22 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        22:27:46   Log-Likelihood:                -17335.\n",
+       "Time:                        22:58:00   Log-Likelihood:                -17335.\n",
        "No. Observations:                1459   AIC:                         3.471e+04\n",
        "Df Residuals:                    1441   BIC:                         3.480e+04\n",
        "Df Model:                          17                                         \n",
@@ -1456,7 +1456,7 @@
        "  <th>Date:</th>             <td>Mon, 22 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:27:46</td>     <th>  Log-Likelihood:    </th> <td> -17477.</td> \n",
+       "  <th>Time:</th>                 <td>22:58:00</td>     <th>  Log-Likelihood:    </th> <td> -17477.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1459</td>      <th>  AIC:               </th> <td>3.497e+04</td>\n",
@@ -1530,7 +1530,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.962\n",
        "Method:                 Least Squares   F-statistic:                     3660.\n",
        "Date:                Mon, 22 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        22:27:46   Log-Likelihood:                -17477.\n",
+       "Time:                        22:58:00   Log-Likelihood:                -17477.\n",
        "No. Observations:                1459   AIC:                         3.497e+04\n",
        "Df Residuals:                    1449   BIC:                         3.503e+04\n",
        "Df Model:                          10                                         \n",
@@ -1665,7 +1665,7 @@
        "  <th>Date:</th>             <td>Mon, 22 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:27:46</td>     <th>  Log-Likelihood:    </th> <td> -17710.</td> \n",
+       "  <th>Time:</th>                 <td>22:58:01</td>     <th>  Log-Likelihood:    </th> <td> -17710.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1459</td>      <th>  AIC:               </th> <td>3.543e+04</td>\n",
@@ -1727,7 +1727,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.675\n",
        "Method:                 Least Squares   F-statistic:                     606.1\n",
        "Date:                Mon, 22 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        22:27:46   Log-Likelihood:                -17710.\n",
+       "Time:                        22:58:01   Log-Likelihood:                -17710.\n",
        "No. Observations:                1459   AIC:                         3.543e+04\n",
        "Df Residuals:                    1453   BIC:                         3.546e+04\n",
        "Df Model:                           5                                         \n",
@@ -1855,8 +1855,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Eğer tahmin performansı ile değişken eliyorsak p değerinin önemi yok\n",
+    "Aciklama gücü ile eliyorsak, p değeri yüksek olanlar elenebilir"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1865,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1883,7 @@
        "         normalize=False)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,8 +1895,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1909,7 +1919,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eğitim kümesindeki gözlem sayısı : 1167\n",
+      "Test kümesindeki gözlem sayısı   : 292\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X_arttirilmis_anlamli_na, y_anlamli, test_size = 0.2, random_state = 500)\n",
+    "\n",
+    "print(\"Eğitim kümesindeki gözlem sayısı : {}\".format(X_train.shape[0]))\n",
+    "print(\"Test kümesindeki gözlem sayısı   : {}\".format(X_test.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1961,7 @@
        "  <th>Date:</th>             <td>Mon, 22 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:54:12</td>     <th>  Log-Likelihood:    </th> <td> -17478.</td> \n",
+       "  <th>Time:</th>                 <td>22:58:01</td>     <th>  Log-Likelihood:    </th> <td> -17478.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1459</td>      <th>  AIC:               </th> <td>3.497e+04</td>\n",
@@ -1998,7 +2029,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.962\n",
        "Method:                 Least Squares   F-statistic:                     4578.\n",
        "Date:                Mon, 22 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        22:54:12   Log-Likelihood:                -17478.\n",
+       "Time:                        22:58:01   Log-Likelihood:                -17478.\n",
        "No. Observations:                1459   AIC:                         3.497e+04\n",
        "Df Residuals:                    1451   BIC:                         3.501e+04\n",
        "Df Model:                           8                                         \n",
@@ -2028,31 +2059,71 @@
        "\"\"\""
       ]
      },
-     "execution_count": 76,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Arttirilmis_anlamli_model= sm.add_constant(X_arttirilmis_anlamli_na)\n",
-    "results = sm.OLS(y_anlamli, X_arttirilmis_anlamli_na).fit()\n",
-    "results.summary()"
+    "last_results = sm.OLS(y_anlamli, X_arttirilmis_anlamli_na).fit()\n",
+    "last_results.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ortalama Mutlak Hata (MAE)        : 29655.109991163336\n",
+      "Ortalama Kare Hata (MSE)          : 1644312687.7761793\n",
+      "Kök Ortalama Kare Hata (RMSE)     : 40550.12561973365\n",
+      "Ortalama Mutlak Yüzde Hata (MAPE) : 18.25589746601895\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ortalama Mutlak Hata (MAE)        : {}\".format(mean_absolute_error(y_test, y_preds)))\n",
+    "print(\"Ortalama Kare Hata (MSE)          : {}\".format(mse(y_test, y_preds)))\n",
+    "print(\"Kök Ortalama Kare Hata (RMSE)     : {}\".format(rmse(y_test, y_preds)))\n",
+    "print(\"Ortalama Mutlak Yüzde Hata (MAPE) : {}\".format(np.mean(np.abs((y_test - y_preds) / y_test)) * 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9619172251239492\n",
+      "0.8061112665753178\n",
+      "0.7994771829911087\n",
+      "0.6759215901690057\n",
+      "0.96189130641121\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (anlamli_10degiskenli_model.rsquared)\n",
+    "print (anlamli_17degiskenli_model.rsquared) \n",
+    "print (tum_degiskenli_model.rsquared)\n",
+    "print(anlamli_5degiskenli_model.rsquared)\n",
+    "print (last_results.rsquared)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eğer tahmin performansı ile değişken eliyorsak p değerinin önemi yok\n",
-    "Aciklama gücü ile eliyorsak, p değeri yüksek olanlar elenebilir"
+    "Model ilk modelimizle yakin degerleri iceriyor. Genel hata degerleri ilk modelde daha dusuk. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
